--- a/components.json
+++ b/components.json
@@ -7,8 +7,7 @@
     "config": "tailwind.config.ts",
     "css": "src/globals.css",
     "baseColor": "slate",
-    "cssVariables": true,
-    "prefix": "tailwind.config.ts"
+    "cssVariables": true
   },
   "aliases": {
     "components": "@/components",
